Fix text-alignment for steps as button

--- a/@navikt/core/css/stepper.css
+++ b/@navikt/core/css/stepper.css
@@ -69,6 +69,7 @@ button.navds-stepper__step {
   padding: 0;
   font: inherit;
   color: inherit;
+  text-align: inherit;
 }
 
 :where(.navds-stepper__step):focus {
